# Random-Quote-Generator

./: README.md  pyproject.toml
.github/workflows/: branch.yaml  release.yaml
docs/: conf.py  index.rst
random_quote_generator/: get_quote.py
tests/: test_get_quote.py
